--- a/public/index.html
+++ b/public/index.html
@@ -108,9 +108,25 @@ body {
   font-family: "Hiragino Kaku Gothic Pro", "ヒラギノ角ゴ Pro W3", メイリオ, Meiryo, "ＭＳ Ｐゴシック", "Helvetica Neue", Helvetica, Arial, sans-serif;
 }
 
-.mic-text {
-  flex: 0 0 50%;
-  max-width: 50%;
+.mic-text1 {
+  margin: 0px 0px 0px 5px;
+  padding: 5px 5px 15px 0px;
+  width: 100%;
+  /* max-width: 50%; */
+
+}
+
+.mic-text2 {
+  margin: 0px 0px 15px 0px;
+  padding: 10px 10px 10px 15px;
+  width: 100%;
+  /* max-width: 50%; */
+
+}
+
+.micbutton {
+  margin: 0px 0px 0px 5px;
+  width: 100px;
 }
 
 header {
